--- a/digitalocean-hs.cabal
+++ b/digitalocean-hs.cabal
@@ -16,6 +16,9 @@ build-type:          Simple
 
 cabal-version:       >=1.10
 
+source-repository head
+  type:         git
+  location:     git://github.com/CodeBlock/digitalocean-hs.git
 
 library
   exposed-modules:     Network.DigitalOcean
