--- a/digitalocean-hs.cabal
+++ b/digitalocean-hs.cabal
@@ -31,3 +31,4 @@ executable digitalocean-status
   build-depends:       base >=4.6 && <4.7, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*, boxes >=0.1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -O2 -threaded
