--- a/digitalocean-hs.cabal
+++ b/digitalocean-hs.cabal
@@ -22,13 +22,13 @@ source-repository head
 
 library
   exposed-modules:     Network.DigitalOcean
-  build-depends:       base >=4.6 && <4.7, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*
+  build-depends:       base >=4.6 && <4.8, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==2.1.*, HTTP ==4000.2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable digitalocean-status
   main-is:             main.hs
-  build-depends:       base >=4.6 && <4.7, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*, boxes >=0.1.3
+  build-depends:       base >=4.6 && <4.8, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit, HTTP ==4000.2.*, boxes >=0.1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -threaded
