--- a/digitalocean.cabal
+++ b/digitalocean.cabal
@@ -1,4 +1,4 @@
-name:                digitalocean-hs
+name:                digitalocean
 version:             0.1.0.0
 synopsis:            A Haskell library for working with the DigitalOcean API
 description:         This library may be used to interact with the DigitalOcean API. Currently only supports querying images, regions, ssh_keys, droplet sizes and currently running droplets. Can also spawn new droplets (servers).
