--- a/digitalocean.cabal
+++ b/digitalocean.cabal
@@ -1,15 +1,17 @@
 name:                digitalocean
 version:             0.1.0.0
 synopsis:            A Haskell library for working with the DigitalOcean API
-description:         This library may be used to interact with the DigitalOcean API. Currently only supports querying images, regions, ssh_keys, droplet sizes and currently running droplets. Can also spawn new droplets (servers).
+description:
+  This library may be used to interact with the DigitalOcean API. Currently only
+  supports querying images, regions, ssh_keys, droplet sizes and currently
+  running droplets. Can also spawn new droplets (servers).
 homepage:            https://github.com/CodeBlock/digitalocean-hs
 
 license:             BSD3
 license-file:        LICENSE
-
 author:              Maxwell Swadling, Ricky Elrod
-maintainer:          maxwellswadling@gmail.com, ricky.gh@elrod.me
-copyright:           Copyright (c) 2013, Maxwell Swadling, Copyright (c) 2013, Ricky Elrod
+maintainer:          maxwellswadling@gmail.com, relrod@haskell.org
+copyright:           (c) 2014 Ricky Elrod, (c) 2013 Maxwell Swadling
 
 category:            Web, Network, Cloud
 build-type:          Simple
@@ -22,13 +24,28 @@ source-repository head
 
 library
   exposed-modules:     Network.DigitalOcean
-  build-depends:       base >=4.6 && <4.8, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==2.1.*, HTTP ==4000.2.*
+  build-depends:
+    HTTP         >= 4000 && < 4001,
+    aeson        >= 0.6  && < 0.9,
+    base         >= 4    && < 5,
+    bytestring   >= 0.10 && < 0.11,
+    http-conduit >= 2.1  && < 2.2,
+    text         >= 0.10 && < 2,
+    transformers >= 0.3  && < 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable digitalocean-status
   main-is:             main.hs
-  build-depends:       base >=4.6 && <4.8, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit, HTTP ==4000.2.*, boxes >=0.1.3
+  build-depends:
+    aeson        >= 0.6  && < 0.9,
+    base         >= 4    && < 5,
+    boxes        >= 0.1  && < 1,
+    bytestring   >= 0.10 && < 0.11,
+    HTTP         >= 4000 && < 4001,
+    http-conduit >= 2.1  && < 2.2,
+    text         >= 0.10 && < 2,
+    transformers >= 0.3  && < 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -threaded
