--- a/digitalocean.cabal
+++ b/digitalocean.cabal
@@ -35,6 +35,7 @@ library
     transformers >= 0.3  && < 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
 executable digitalocean-status
   main-is:             main.hs
@@ -49,4 +50,4 @@ executable digitalocean-status
     transformers >= 0.3  && < 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -O2 -threaded
+  ghc-options:         -O2 -threaded -Wall
